# Zertree

./: .gitignore  LICENSE  README.md  build.bat
.github/workflows/: ci.yml
.swarm/evidence/: agent-tools-init-1777482037701.json
branding/: colors.md  typography.md
branding/logo/: logo-ascii.txt
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
examples/: test-sbom-cyclonedx.json  test-sbom-spdx.json
github-action/: Dockerfile  action.yml  entrypoint.sh
rust-parser/: Cargo.toml
rust-parser/src/: cve_fetcher.rs  main.rs  parser.rs  registry.rs  rules.rs  scorer.rs
web-ui/: index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1780743381490-e83d66f950b51.mjs
web-ui/src/: App.svelte
web-ui/src/lib/: CommandPalette.svelte  Dashboard.svelte  DemoSbom.js  FilmMode.svelte  Graph.svelte  Header.svelte  Sidebar.svelte
web-ui/src/tests/: telemetry_validation.js
